@@ -1,6 +1,7 @@
 
 {{$NEXT}}
 
+    * Delete perl build folder after installation.
     * Fix bug when building perl, where p5stack won't get back to
       working folder (Issue#8).
     * Replace prints with log calls (Issue#4, reported by AMBS++).
